--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,10 +16,7 @@
   },
   "rules": {
     "no-console": 0,
-    "quotes": [
-      "error",
-      "single"
-    ],
+    "quotes": ["error", "single"],
     "comma-dangle": [
       "error",
       {
@@ -28,12 +25,6 @@
         "imports": "always-multiline",
         "exports": "always-multiline",
         "functions": "ignore"
-      }
-    ],
-    "max-len": [
-      "error",
-      {
-        "code": 120
       }
     ]
   }
