--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "no-empty-source": null,
     "string-quotes": "double",
     "scss/comment-no-empty": null,
+    "max-line-length": null,
     "scss/at-extend-no-missing-placeholder": null,
     "scss/dollar-variable-colon-space-after": null,
     "scss/dollar-variable-empty-line-before": null,
@@ -40,14 +41,6 @@
           "responsive",
           "variants",
           "screen"
-        ]
-      }
-    ],
-    "max-line-length": [
-      80,
-      {
-        "ignore": [
-          "comments"
         ]
       }
     ]
