Feature: add blog posts to flex search index

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -87,7 +87,7 @@ clipBoard = true
 instantPage = true
 flexSearch = true
 searchSectionsShow = []
-searchSectionsIndex = []
+searchSectionsIndex = ["blog"]
 darkMode = true
 bootStrapJs = true
 breadCrumb = false
