--- a/.github/workflows/node.js-ci.yml
+++ b/.github/workflows/node.js-ci.yml
@@ -1,4 +1,4 @@
-name: Hyas and Node.js CI
+name: Node.js CI
 
 on:
   pull_request:
@@ -14,7 +14,7 @@ jobs:
         node: [ 16.x, 18.x ]
 
     steps:
-      - name: Check out Hyas project
+      - name: Check out project
         uses: actions/checkout@v2
 
       - name: Set up Node.js ${{ matrix.node }}
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Hyas test script
+      - name: Run test scripts
         run: npm test
 
       - name: Build production website
